<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="15dp"
    android:paddingHorizontal="25dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableLayout android:id="@+id/tblColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:id="@+id/rowAlpha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvAlpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/alpha"/>
            <SeekBar android:id="@+id/sbAlpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:padding="14dp"
                android:layout_weight="1"
                android:max="255"/>
        </TableRow>

        <TableRow android:id="@+id/rowRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/red"/>
            <SeekBar android:id="@+id/sbRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:padding="14dp"
                android:layout_weight="1"
                android:max="255"/>
        </TableRow>

        <TableRow android:id="@+id/rowGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/green"/>
            <SeekBar android:id="@+id/sbGreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:padding="14dp"
                android:layout_weight="1"
                android:max="255"/>
        </TableRow>

        <TableRow android:id="@+id/rowBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/tvBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:text="@string/blue"/>
            <SeekBar android:id="@+id/sbBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:padding="14dp"
                android:layout_weight="1"
                android:max="255"/>
        </TableRow>
    </TableLayout>

    <FrameLayout android:id="@+id/displayColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tblColor">

        <View android:id="@+id/colorView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"/>
    </FrameLayout>

    <Button android:id="@+id/btnColorSet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/displayColor"
        android:text="@string/setColor"
        />

</androidx.constraintlayout.widget.ConstraintLayout>